@@ -148,8 +148,9 @@ $pgv_lang["changes_occurred"]		= "An diesem Datensatz wurden folgende Änderunge
 $pgv_lang["confirm_remove"]			= "Möchten Sie wirklich diese Person aus dieser Familie entfernen?";
 $pgv_lang["confirm_remove_object"]	= "Möchten Sie wirklich dieses Objekt entfernen?";
 $pgv_lang["create_repository"]		= "Archiv erstellen";
+$pgv_lang["shared_note_assisted"]	= "Gemeinsame Bemerkung mit Hilfe des Assistenten bearbeiten";
 $pgv_lang["create_shared_note"]		= "Neue gemeinsame Bemerkung erstellen";
-$pgv_lang["create_shared_note_assisted"]	= "Neues Ereignis «gemeinsame Bemerkung» mit Hilfe des Assistenten erstellen";
+$pgv_lang["create_shared_note_assisted"]	= "Neue gemeinsame Bemerkung mit Hilfe des Assistenten erstellen";
 $pgv_lang["add_new_event_assisted"]			= "Neues Ereignis mit Hilfe des Assistenten erstellen";
 $pgv_lang["create_source"]			= "Neue Quelle erstellen";
 $pgv_lang["current_person"]		 	= "gleiche Person";
