@@ -115,6 +115,7 @@ $pgv_lang["generate_thumb_help"]		= "~#pgv_lang[auto_thumbnail]#~<br /><br />Php
 $pgv_lang["edit_add_NOTE_help"]			= "~#pgv_lang[add_note]#~<br /><br />Hier ist es möglich, einen neuen Bemerk an diesen Fakt anzuschließen.  Bemerke sind ohne festgestelltes Format; Sie können eingeben was und wie Sie wollen.  Bemerke sind in der «Details» Spalte des betroffenen Faktes sichtbar.<br /><br />";
 $pgv_lang["edit_add_SHARED_NOTE_help"]	= "~#pgv_lang[add_shared_note]#~<br /><br />~#pgv_lang[edit_shared_note]#~<br /><br />Wie gewöhnliche Bemerkungen, sind gemeinsame Bemerkungen einfacher Text ohne besonderes Format.  Im Gegenteil zu gewöhnlichen Bemerkungen, kann jede gemeinsame Bemerkung mit mehr als einer Person, Familie, Quelle, usw. verbunden sein.<br /><br />Wenn Sie den richtigen Ikon klicken, können Sie eine Verbindung zu einer bereits bestehenden gemeinsamen Bemerkung herstellen oder eine neue gemeinsame Bemerkung erstellen und auch gleichzeitig die Verbindung dazu herstellen.  Falls solche Verbindung bereits vorhanden ist, können Sie den Text der gemeinsamen Bemerkung bearbeiten und ändern.<br /><ul><li><b>Verbindung herstellen</b><div style=\"padding-left:20px;\">Wenn das ID der gewünschten gemeinsamen Bemerkung Ihnen bekannt ist, können Sie diese Nummer direkt in das Feld eingeben.<br /><br />Wenn Sie den <b>#pgv_lang[find_shared_note]#</b> Ikon klicken, können Sie den Text aller gemeinsamen Bemerkungen durchsuchen und dann eine davon wählen.  Die ID Nummer der gewählten Bemerkung wird dann automatisch in das Feld eingegeben.<br /><br />Sie müssen den <b>#pgv_lang[add]#</b> Button klicken, dass der ursprüngliche Datensatz aktualisiert wird.</div><br /></li><li><b>Neue Bemerkung erstellen</b><div style=\"padding-left:20px;\">Wenn Sie den <b>#pgv_lang[create_shared_note]#</b> Ikon klicken, öffnet sich ein Formular.  Sie können darin den Text der neuen gemeinsamen Bemerkung eingeben wie Sie möchten.  Wie bei gewöhnlichen Bemerkungen, können Sie auch URL-Adressen eingeben.<br /><br />Nachdem Sie den <b>#pgv_lang[save]#</b> Button klicken, erhalten Sie eine Notiz mit der ID-Nummer der neuen Bemerkung.  Um das Fenster zu schließen und die ID-Nummer in das Eingabefeld zu kopieren, sollten Sie auf dieser Notiz klicken.  Wenn Sie nur das Fenster schließen, wird die neue ID-Nummer nicht automatisch in das Eingabefeld kopiert.<br /><br />Sie müssen danach noch den <b>#pgv_lang[add]#</b> Button klicken, um den ursprünglichen Datensatz zu aktualisieren.</div><br /></li><li><b>Bemerkung bearbeiten</b><div style=\"padding-left:20px;\">Wenn Sie den <b>#pgv_lang[edit_shared_note]#</b> Ikon klicken, öffnet sich ein Formular.  Sie können den Text der bestehenden Bemerkung ändern wie Sie möchten.  Wie bei gewöhnlichen Bemerkungen, können Sie auch URL-Adressen eingeben.<br /><br />Nachdem Sie den <b>#pgv_lang[save]#</b> Button klicken, wird der Text der gemeinsamen Bemerkung aktualisiert.  Sie können dann das Fenster schließen und danach den <b>#pgv_lang[save]#</b> Button noch einmal klicken.<br /><br />Wenn Sie den Text einer gemeinsamen Bemerkung ändern, wird Ihre Änderung sofort in allen damit verbundenen Datensätzen sichtbar.  Der selbe geänderte Text wird auch in neu verbundenen Datensätzen sichtbar.</div></li></ul>";
 $pgv_lang["edit_add_GEDFact_ASSISTED_help"]	= "~Gebrauchsanweisung des GEDFACT Assistenten~<br /><br />Dieses Thema muss noch ausführlich beschrieben werden.<br /><br >Vorübergehend ... Die neue ID-Nummer wird automatisch engetragen wenn Sie das Link klicken.";
+$pgv_lang["edit_add_GEDFact_ASSISTED_help"]	= "~Der GEDFact Assistent~<br /><br />Wenn Sie den «+» Ikon klicken, öffnet sich ein Fenster worin Sie die gemeinsame Bemerkung mit Hilfe des GEDFact Assistenten bearbeiten können.<br />Gezielte Hilfe Themen sind dort zu finden.<br /><br />Wenn Sie den «Speichern» Button klicken, wird die ID-Nummer der eben bearbeiteten gemeinsamen Bermerkung hier eingefügt.<br /><br />";
 $pgv_lang["edit_add_SOUR_help"]			= "~#pgv_lang[add_source]#~<br /><br />Hier ist es möglich, ein neues Quellenzitat an diesen Fakt anzuschließen.  Im «Quelle» Feld geben Sie die ID-Nummer der Quelle ein.  Falls die zitierte Quelle noch nicht in der Datenbank eingetragen ist, können Sie das <b>#pgv_lang[create_source]#</b> Link klicken.  Sie können auch nach der zu zitierenden Quelle suchen.  Im #factarray[PAGE]# Feld geben Sie die Seite oder Details die Anderen das Finden dieses Zitats in der angedeuteten Quelle erleichtern.  Im #factarray[TEXT]# Feld können Sie, wenn notwending, das eigentliche Zitat oder eine Beschreibung des Zitates als Text eingeben.<br /><br />";
 $pgv_lang["edit_add_ASSO_help"]			= "~#pgv_lang[add_asso]#~<br /><br />Diese Option ermöglicht Ihnen, eine Beziehung zwischen diesem Fakt und einer anderen Person zu erstellen.  Sie können, zum Beispiel, bezeichnen dass die andere Person Pate dieser Person ist.<br /><br />";
 $pgv_lang["edit_QUAY_help"]				= "~#factarray[QUAY]#~<br /><br />Dieses Feld dokumentiert die Qualität oder Zuverlässigkeit der Informationen dieser Quelle.<br /><br />Viele Programme erfordern hier eine Nummer. <b>3</b> kann bedeuten dass die Quelle völlig zuverlässig ist, <b>2</b> kann bedeuten dass die Quelle nicht ganz völlig zuverlässig ist, <b>1</b> kann bedeuten dass die Informationen nicht ganz völlig zuverlässig sind, <b>0</b> kann bedeuten dass die Quelle unzuverlässig ist.<br /><br />";
