@@ -432,7 +432,8 @@ $pgv_lang["edit_FORM_help"]		= "~#factarray[FORM]#~<br /><br />To jest dodatkowe
 $pgv_lang["generate_thumb_help"]		= "~#pgv_lang[auto_thumbnail]#~<br /><br />Twój system potrafi automatycznie generować miniaturki dla pewnych rodzajów plików graficznych. Mogą to być pliki BMP, JPG, GIF, oraz PNG. Typy obsługiwane przez twój system są wymienione obok opcji wyboru.<br /><br />Zaznaczając tę opcję poinformujesz system, że wgrywasz obrazki tego typu i że chcesz, aby zostały dla nich wygenerowane miniaturki. Nie zaznaczaj tej opcji jeśli chcesz dostarczyć własne miniaturki.<br /><br />";
 $pgv_lang["edit_add_NOTE_help"]			= "~#pgv_lang[add_note]#~<br /><br />Ta sekcja pozwala dodać nową notatkę do faktu, który właśnie edytujesz. Notatki mają dowolną formę i są widoczne w sekcji \"Szczegóły faktu\".<br /><br />";
  $pgv_lang["edit_add_SHARED_NOTE_help"]	= "~#pgv_lang[add_shared_note]#~<br />~#pgv_lang[edit_shared_note]#~<br /><br />Ta sekcja pozwala dodać nową wspólną notatkę do faktu, który właśnie edytujesz. Wspólne notatki tak jak zwykłe notatki mają dowolną formę tekstową i są widoczne w sekcji \"Szczegóły faktu\". Od zwykłych notatek odróżnia je możliwość powiązania ich z większą ilością osób, rodzin, źródeł i wydarzeń.<br /><br />Po kliknięciu odpowiedniego odnośnika będzie można powiązać wydarzenie z istniejąca wspólną notatką lub utworzyć nową wspólną notatkę i jednocześnie ją powiązać. Jeśli istnieje powiązanie ze wspólną notatką możliwa jest edycja zawartości notatki.<br /><ul><li><b>Powiąż z istniejącą wspólną notatką</b><div style=\"padding-left:20px;\">Jeśli znasz identyfikator żądanej wspólnej notatki, możesz wpisać jej numer bezpośrednio w polu.<br /><br />Gdy klikniesz ikonę <b>#pgv_lang[find_shared_note]#</b> będziesz mieć możliwość wyszukania tekstu istniejącej notatki i wybrania odpowiedniej. Identyfikator notatki zostanie automatycznie wprowadzony w tym polu.<br /><br />Musisz kliknąć przycisk <b>#pgv_lang[add]#</b> aby uaktualnić istniejący wpis.</div><br /></li><li><b>Utwórz nową wspólną notatkę.</b><div style=\"padding-left:20px;\">Gdy klikniesz ikonę <b>#pgv_lang[create_shared_note]#</b> otworzy się nowe okno. Możesz wprowadzić tekst nowej notatki. Tak jak w przypadku zwykłych notatek możesz podawać adresy URL.<br /><br />Po kliknięciu przycisku <b>#pgv_lang[save]#</b> zostanie wyświetlony tekst z identyfikatorem nowo utworzonej wspólnej notatki. Należy kliknąć na tą wiadomość aby zamknąć okno edycji oraz skopiować identyfikator do pola wyboru identyfikatora. Jeśli tylko zamkniesz okno, nowo utworzony identyfikator nie zostanie skopiowany automatycznie.<br /><br />Musisz kliknąć przycisk <b>#pgv_lang[add]#</b> aby uaktualnić istniejący wpis.</div><br /></li><li><b>Edytuj istniejącą wspólną notatkę</b><div style=\"padding-left:20px;\">Gdy klikniesz ikonę <b>#pgv_lang[edit_shared_note]#</b> otworzy się nowe okno. Możesz wprowadzić tekst nowej notatki. Tak jak w przypadku zwykłych notatek możesz podawać adresy URL.<br /><br />Po kliknięciu przycisku <b>#pgv_lang[save]#</b> tekst wspólnej notatki zostanie uaktualniony. Możesz zamknąć okno i kliknąć przycisk <b>#pgv_lang[save]#</b> ponownie.<br /><br />Gdy zmienisz tekst wspólnej notatki Twoje zmiany będą widoczne we wszystkich miejscach, z którymi jest powiązana wspólna notatka. Nowe powiązania, które utworzysz po dokonaniu zmian będą również używać uaktualnionego tekstu.</div></li></ul>";
- $pgv_lang["edit_add_GEDFact_ASSISTED_help"] = "~KORZYSTANIE Z ASYSTENTA GEDFACT~<br /><br />Tekst pomocy na ten temat do napisania.<br /><br >Na razie... Nowo utworzony numer ID zostanie skopiowany automatycznie po kliknięciu linku.";
+ $pgv_lang["edit_add_GEDFact_ASSISTED_help"] = "~KORZYSTANIE Z ASYSTENTA GEDFACT~<br /><br />Kliknięcie ikony \"+\" otworzy okno Aystenta GEDFact.<br />Tekst pomocy będzie dostępny tutaj.<br /><br />Gdy klikniesz przycisk \"Zapisz\", identyfikator Wspólnej notatki zostanie tutaj wklejony.<br /><br />";
+ "Tekst pomocy na ten temat do napisania.<br /><br >Na razie... Nowo utworzony numer ID zostanie skopiowany automatycznie po kliknięciu linku.";
 $pgv_lang["edit_add_SOUR_help"]		= "~#pgv_lang[add_source]#~<br /><br />Ta sekcja pozwala dodawać nowe źródło do faktu, który właśnie edytujesz.<br /><br />W polu \"Źródło\" podaj identyfikator źródła. Kliknij odnośnik <b>#pgv_lang[create_source]#</b> jeśli chcesz wprowadzić nowe źródło. W \"Szczegółach źródła\" możesz wprowadzić na przykład numer strony lub inną informację, która pomoże innej osobie odnaleźć informację w źródle. W pole \"Treść\" możesz wprowadzić transkrypcję słowną źródła.<br /><br />";
 $pgv_lang["edit_add_ASSO_help"]		= "~#pgv_lang[add_asso]#~<br /><br />#pgv_lang[add_asso]# pozwala powiązać fakt z odpowiednią osobą na stronie. Jest to jeden ze sposobów, w jaki możesz na przykład zaznaczyć, że ktoś był ojcem chrzestnym pewnej osoby.<br /><br />";
 $pgv_lang["edit_QUAY_help"]		= "~#factarray[QUAY]#~<br /><br />Możesz użyć tego pola do określenia jakości lub wiarygodności danych, pochodzących z tego źródła. Wiele aplikacji genealogicznych przechowuje w tym polu wartość liczbową. <b>3</b> może oznaczać, że dane pochodzą z oryginalnego źródła, <b>2</b> może oznaczać, że było to źródło wtórne, <b>1</b> może oznaczać, że informacja jest wątpliwa, a <b>0</b> - że źródło jest niewiarygodne.<br /><br />";
